Only show "Never translate this site" when site can be blacklisted.

The option to "Never translate this site" is always shown on the
translate dialog, even when the site cannot be blacklisted (for example
a file:/// URL). This patch changes the translate options combon so
"Never translate..." is only shown if it will have some effect.

Bug: 663934
Change-Id: I64b80d830e124e9372906bd0c4711568c46ff636