chrome/browser/ui/translate/translate_bubble_model_impl.h
@@ -50,6 +50,7 @@ class TranslateBubbleModelImpl : public TranslateBubbleModel {
   void RevertTranslation() override;
   void OnBubbleClosing() override;
   bool IsPageTranslatedInCurrentLanguages() const override;
+  bool CanBlacklistSite() override;
 
  private:
   std::unique_ptr<translate::TranslateUIDelegate> ui_delegate_;
