components/translate/core/browser/translate_ui_delegate.cc
@@ -290,6 +290,10 @@ bool TranslateUIDelegate::IsSiteBlacklisted() {
   return !host.empty() && prefs_->IsSiteBlacklisted(host);
 }
 
+bool TranslateUIDelegate::CanBlacklistSite() {
+  return !GetPageHost().empty();
+}
+
 void TranslateUIDelegate::SetSiteBlacklist(bool value) {
   std::string host = GetPageHost();
   if (host.empty())
